# permatrust

./: .cursorrules  .editorconfig  .gitignore  .npmrc  CLAUDE.md  Cargo.toml  README.md  biome.json  canister_ids.json  dfx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pt_backend.did  tsconfig.json
docs/: BIOME.md  (+1 more)
src/main_canister/: Cargo.toml  main_canister.did
src/main_canister/src/: env.rs  lib.rs
src/main_canister/src/logs/: logs_manager.rs  methods.rs  state.rs
src/main_canister/src/management/: management_manager.rs  methods.rs  mod.rs  state.rs  types.rs
src/main_canister/src/management/controllers/: create_tenant_canister.rs  get_all_tenant_canister_ids.rs  get_tenant_canister_ids.rs  mod.rs
src/pt_backend/: Cargo.toml  pt_backend.did
src/pt_backend/src/: access_control.rs  documents.rs  init.rs  lib.rs  logger.rs  organisations.rs  organizations.rs  projects.rs  revisions.rs  users.rs  workflows.rs
src/pt_backend/src/access_control/: methods.rs  state.rs
src/pt_backend/src/documents/: methods.rs  mod.rs  state.rs
src/pt_backend/src/organizations/: methods.rs  mod.rs  state.rs
src/pt_backend/src/projects/: methods.rs  mod.rs  state.rs
src/pt_backend/src/revisions/: methods.rs  mod.rs  state.rs
src/pt_backend/src/users/: methods.rs  mod.rs  state.rs
src/pt_backend/src/workflows/: methods.rs  mod.rs  state.rs
src/shared/: Cargo.toml
src/shared/src/: env.rs  lib.rs  logging.rs  nns_ledger_generated.rs  pagination.rs  pt_backend_generated.d.ts  pt_backend_generated.did.js  pt_backend_generated.rs  pt_backend_generated_traits.rs
src/shared/src/consts/: documents.rs  memory_ids.rs  mod.rs  revisions.rs
src/shared/src/traits/: access_control.rs  documents.rs  invites.rs  logs.rs  mod.rs  organization.rs  organizations.rs  pagination.rs  projects.rs  revisions.rs  users.rs  workflows.rs
src/shared/src/types/: access_control.rs  documents.rs  entities.rs  errors.rs  invites.rs  logs.rs  management.rs  mod.rs  organisations.rs  organization.rs  organizations.rs  pagination.rs  projects.rs  revisions.rs  tenant.rs  users.rs  workflows.rs
src/shared/src/utils/: filter.rs  logs.rs  mod.rs  pagination.rs  random.rs  sort.rs
src/tenant_canister/: Cargo.toml  tenant_canister.did
src/tenant_canister/src/: env.rs  init.rs  lib.rs  logger.rs
src/tenant_canister/src/access_control/: access_control_manager.rs  methods.rs  mod.rs  state.rs
src/tenant_canister/src/access_control/controllers/: assign_roles.rs  create_role.rs  get_permissions.rs  get_project_roles.rs  mod.rs  update_role_permissions.rs
src/tenant_canister/src/documents/: document_manager.rs  methods.rs  mod.rs  state.rs
src/tenant_canister/src/documents/controllers/: create_document.rs  list_documents.rs
src/tenant_canister/src/invites/: invites_manager.rs  methods.rs  mod.rs  state.rs
src/tenant_canister/src/invites/controllers/: create_invite.rs  get_invite.rs  list_invites.rs  mod.rs
src/tenant_canister/src/logs/: logs_manager.rs  mod.rs  state.rs
src/tenant_canister/src/management/: management_manager.rs  methods.rs  mod.rs  state.rs
src/tenant_canister/src/management/controllers/: mod.rs  self_upgrade.rs
src/tenant_canister/src/organization/: methods.rs  mod.rs  organization_manager.rs  state.rs
src/tenant_canister/src/projects/: methods.rs  mod.rs  projects_manager.rs  state.rs
src/tenant_canister/src/revisions/: methods.rs  mod.rs  revisions_manager.rs  state.rs
src/tenant_canister/src/users/: methods.rs  mod.rs  state.rs  user_manager.rs
src/tenant_canister/src/workflows/: methods.rs  mod.rs  state.rs  workflows_manager.rs
(+438 files in other folders)
