[package]
name = "main_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.10.14"

[dev-dependencies]
pocket-ic = "9.0.0"

[dependencies]
candid = "0.10.0"
candid_parser = "0.1.4"
ic-cdk = "0.18.3"
ic-cdk-macros = "0.18.1"
ic-stable-structures = "0.6.9"
ic-vetkeys = "0.2.0"
serde = "1.0.203"
getrandom = { version = "0.2.15", features = ["custom"] }

shared = { path = "../shared" }


