[package]
name = "pt_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.10"

[dependencies]
candid = "0.10.0"
candid_parser = "0.1.4"
clippy = "0.0.302"
fsm = "0.2.2"
ic-cdk = "0.14.0"
ic-cdk-macros = "0.14.0"
ic-stable-structures = "0.6.5"
petgraph = "0.6.5"
rust-fsm = "0.7.0"
serde = "1.0.203"
serde_bytes = "0.11.15"
serde_json = "1.0.117"
shared = { path = "../shared" }
