[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[build-dependencies]
candid = "0.10.14"

[dependencies]
candid = "0.10.14"
dotenv = "0.15.0"
ic-cdk = "0.18.3"
ic-stable-structures = "0.6.9"
ic-vetkeys = "0.2.0"
serde = "1.0.203"
serde_bytes = "0.11.14"
petgraph = "0.6.5"
serde_json = "1.0.117"
strum = "0.26.3"
strum_macros = "0.26.3"
base64 = "0.22.1"
sha2 = "0.10.9"
getrandom = { version = "0.2.15", features = ["custom"] }


