[package]
name = "tenant_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.10"

[dev-dependencies]
pocket-ic = "10.0.0"

[dependencies]
candid = "0.10.0"
candid_parser = "0.1.4"
fsm = "0.2.2"
ic-cdk = "0.18.3"
ic-cdk-macros = "0.18.1"
ic-stable-structures = "0.6.5"
ic-vetkeys = "0.2.0"
petgraph = "0.6.5"
rust-fsm = "0.7.0"
serde = "1.0.203"
sha2 = "0.10.9"
hex = "0.4.3"
serde_bytes = "0.11.15"
serde_json = "1.0.117"
strum = "0.26.3"
strum_macros = "0.26.3"
getrandom = { version = "0.2.15", features = ["custom"] }

shared = { path = "../shared" }
